# gatb-lite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
benchs/: CMakeLists.txt  benchs.cpp  counter.cpp  memory.cpp  read_superkmers.cpp  unalignedint.cpp
cmake/: FindSphinx.cmake  overrides.cmake
docs/: CMakeLists.txt  conf.py.in
examples/: CMakeLists.txt
examples/counter/: CMakeLists.txt  counter.cpp
examples/entropy_filter/: CMakeLists.txt  entropy_filter.cpp
examples/read_superkmers/: CMakeLists.txt  read_superkmers.cpp
include/gatbl/: common.hpp  fastx.hpp  fastx2kmer.hpp  kmer.hpp  scheduler.hpp
include/gatbl/ds/: int_vector.hpp  rings.hpp
include/gatbl/sys/: bits.hpp  exceptions.hpp  file.hpp  memory.hpp  mmap.hpp  serialization.hpp  thread.hpp
include/gatbl/utils/: compatibility.hpp  concepts.hpp  condition_check.hpp  empty_base.hpp  interator_pair.hpp  iterator_pair.hpp  no_conversion.hpp  nop_functor.hpp  nucleotide.hpp  pimpl.tpp  precondition_check.hpp  range_view.hpp  ranges.hpp  reverse_range.hpp  string.hpp  type_erasure.hpp  unique_range.hpp
scripts/: pre-commit  test.sh
tests/: CMakeLists.txt  fastx.cpp  int_vector.cpp  kmer.cpp  memory.cpp  sched.cpp  test_utils.hpp
tests/data/: test.fa  test.fq
